# ChangeLog for dev-util/git
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.190 2007/05/01 03:17:06 robbat2 Exp $

*git-1.5.1.3 (01 May 2007)

  01 May 2007; Robin H. Johnson <robbat2@gentoo.org> +git-1.5.1.3.ebuild:
  Version bump.

  24 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> -git-1.4.1.1.ebuild,
  -git-1.4.4.4.ebuild, -git-1.5.1.1.ebuild:
  Remove unused stuff

  23 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> git-1.5.0.7.ebuild:
  Stable on Mips, bug 173327.

*git-1.5.1.2 (23 Apr 2007)

  23 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> +git-1.5.1.2.ebuild:
  New upstream version.

*git-1.5.1.1 (12 Apr 2007)

  12 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> -git-1.5.1.ebuild,
  +git-1.5.1.1.ebuild:
  New upstream version, superceeds 1.5.1

  11 Apr 2007; Christian Faulhammer <opfer@gentoo.org> git-1.5.0.7.ebuild:
  stable amd64, bug 173327

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> git-1.5.0.7.ebuild:
  Stable on ppc64; bug #173327

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> git-1.5.0.7.ebuild:
  ppc stable

  04 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> git-1.5.0.7.ebuild:
  Stable on alpha wrt bug #173327

  04 Apr 2007; Jeroen Roovers <jer@gentoo.org> git-1.5.0.7.ebuild:
  Stable for HPPA (bug #173327).

  04 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> git-1.5.0.7.ebuild:
  Stable on sparc wrt #173327

  04 Apr 2007; Raúl Porcel <armin76@gentoo.org> git-1.5.0.7.ebuild:
  ia64 + x86 stable wrt bug 173327

  04 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> -git-1.4.2.4.ebuild,
  -git-1.4.4.3.ebuild:
  Remove unused versions.

*git-1.5.1 (04 Apr 2007)
*git-1.5.0.7 (04 Apr 2007)

  04 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> -git-1.5.0.6.ebuild,
  +git-1.5.0.7.ebuild, +git-1.5.1.ebuild:
  Revision and version bump. Remove 1.5.0.6

*git-1.5.0.6 (29 Mar 2007)
