@@ -5,11 +5,15 @@ AUX git-daemon.initd 526 RMD160 1ee04d8a5636593b41d2864afbad076ee6d770aa SHA1 7f
 AUX git-daemon.xinetd 260 RMD160 9c1abde72ac5064e1fc86afd29c2a74079db91a4 SHA1 4763c4595ae65e38c189366fca35f73f18c9a03a SHA256 6a3503904204163775722e8a455e4ebaa8648f6d288340979387ad4eb55f4c0a
 DIST git-1.5.1.2.tar.bz2 1120779 RMD160 91019f417972162b2e14d1ddb607522390f68d75 SHA1 d49e6ae0aecd9cff403a110c67041b3c0dbd7a1f SHA256 629a6bd89b226f20cc21c954bd695c91e284b664c05b7d66b706866112b7f628
 DIST git-1.5.1.3.tar.bz2 1122617 RMD160 2f1e7e9c0a9dd7745086d9da1478a8fd0be65de0 SHA1 673bbd457e713251a7fbf54369150dd760c5606d SHA256 876c0902e71a87bb59dae5224f094e484269f0f140dab62c2670878625da65d7
+DIST git-1.5.1.4.tar.bz2 1126258 RMD160 dd8af6da7e8e99e229cf9798a71543136e0f1b35 SHA1 6ab0e784ca9ab499718103179576fb890e61c06e SHA256 3d65197647592779c8932a44f6e390412492d350aa637af5d097ab46e429bbf0
 DIST git-htmldocs-1.5.1.2.tar.bz2 471266 RMD160 9c739f6b4d7e1ba79148d610e3fa0accf14e08a7 SHA1 2684caa9c0a1392dfd0a97b6d0568f82c0b02ec8 SHA256 6ec2942ab5dd90db19324d39a3307f67a471dd41af6bb9749555f3c21aefd94b
 DIST git-htmldocs-1.5.1.3.tar.bz2 474857 RMD160 892f5e1f03bc23c617bfd00c88734f3b221f3f35 SHA1 ba316ca8f3166af98065606c36f84da744b5fcc8 SHA256 14156a2245c36bf6b68f98c715bcf4577a3b45daa2b10eae88d5a017e4baf5f2
+DIST git-htmldocs-1.5.1.4.tar.bz2 477746 RMD160 d61eb662d07c0c9eab33f9502c4a29ccb9ee9cd2 SHA1 11092d4c1241fed051ac387512d1c94886c45e72 SHA256 27949fc878330bb29458ee56b7ac15efb0dbe64543a41b6010a528bac45cf596
 DIST git-manpages-1.5.1.2.tar.bz2 132716 RMD160 f835da9dcf54860eaabc3c861c9013ee9f717f6d SHA1 08b61944669a6c4260a29281d3e62f127142e942 SHA256 bc5b6514c0bedfecc81ec7221a1e4bece967e0bed33aeaaa90a7c6823b541dec
 DIST git-manpages-1.5.1.3.tar.bz2 133667 RMD160 ac64a5c16c35cf6feb86fa68361124e25f0186a5 SHA1 3a5ecaa36fb5b7c3dba9a96240016fcccac6cfc0 SHA256 7b21d618b3b14120cf0c3c3385fa572c4dc95d780b92166ccdc5503d2eef5879
+DIST git-manpages-1.5.1.4.tar.bz2 133741 RMD160 cadc6c3be2e9878d91cd885303b900ac8433aaf5 SHA1 c112ddccf99b22088959a5b3c7b9edae23fef6c2 SHA256 51caf75f8d31c478f88801caa3094876f4f3cd663d24f99a5b91e7d1fe6088c7
 EBUILD git-1.5.1.2.ebuild 4721 RMD160 f1a1b7eb3422b6f55ac53133e5f9f08c999aab17 SHA1 1d15e686d748eddd36ed6b2c579bf8ac134d909f SHA256 aa58a6239d11bef6091be24f9d151be57f5794a4206469fbb4206b4d02d9c939
 EBUILD git-1.5.1.3.ebuild 4723 RMD160 cafbd4d7b20ea1d9c6620f34f4881dd0e579eb5b SHA1 92437c0b9e6afb76bc6a79d58dad7620922978fa SHA256 97de2dfdbbf0c72b2e082e7d355d9fae259c153d3cf3d00433b32c1bf10f5fb9
-MISC ChangeLog 27014 RMD160 952e51a32de84e37e9feb026b8b77ce6634c2324 SHA1 7515d49ad6ac29b43a803a40972d964ed2ed0813 SHA256 6a4355a3fb4a32540a6232809d38eefc89bbf2ae4a4975dbb0fa126f05508185
-MISC metadata.xml 253 RMD160 e09bab6a5a422f501b8e07a3983c5790e00ac92a SHA1 7c2340e011ce57927ff31d7e3397ef4bb1c7ad27 SHA256 1f2e9f9f57e781c296ac5c39c54eabf82a47b7facd0698b296bc76f50799432c
+EBUILD git-1.5.1.4.ebuild 4723 RMD160 00651f2e86f0f77465fde1c5d631dbf1b39fe74c SHA1 51627d604e8ea3b5efbf3a88c56115884a25fd94 SHA256 52a54ecf78ba28c59d901d1770e0305ba13c6f1e3ff8874cade2b7f946c1587e
+MISC ChangeLog 27133 RMD160 b3f80778602fcfe338b2f66dea63d7bcac283962 SHA1 dc6d42a3238cb6189ded8eb35c5c7cd18572b1a4 SHA256 50516f10589ea6e9dd59fa5837428b9867dfbde9678918bfe15ef59332e04c5f
+MISC metadata.xml 392 RMD160 da59e9305bc7e87b945795cdd7725b8c4130dc84 SHA1 d00357fdc17b861721ae37474801fba87d1dc6a7 SHA256 790671f0af52b6c259869673a58dcaac9dee62dc57e4afd9807f61c0790f1dc5
