@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.190 2007/05/01 03:17:06 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.191 2007/05/09 08:40:02 robbat2 Exp $
+
+*git-1.5.1.4 (09 May 2007)
+
+  09 May 2007; Robin H. Johnson <robbat2@gentoo.org> +git-1.5.1.4.ebuild:
+  Version bump.
 
 *git-1.5.1.3 (01 May 2007)
 
